<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_zerion_gradient"
	xmlns:tools="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp">

		<TextView
			android:id="@+id/wifiTitleView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/hotspot_help_wifi_title"
			android:textColor="#FFFFFF"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/wifi1View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_wifi_1"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/wifiTitleView" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/wifi2View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_wifi_2"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/wifi1View" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/wifi3View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_wifi_3"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/wifi2View" />

		<TextView
			android:id="@+id/siteTitleView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/hotspot_help_site_title"
			android:textColor="#FFFFFF"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/wifi3View" />

		<TextView
			android:id="@+id/site1View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_site_1"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/siteTitleView" />

		<TextView
			android:id="@+id/site2View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_site_2"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/site1View" />

		<TextView
			android:id="@+id/site3View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_site_3"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/site2View" />

		<TextView
			android:id="@+id/site4View"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:drawablePadding="6dp"
			android:text="@string/hotspot_help_site_4"
			android:textColor="#B3FFFFFF"
			app:drawableLeftCompat="@drawable/ic_circle_small"
			app:drawableStartCompat="@drawable/ic_circle_small"
			app:drawableTint="#26B7F0"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/site3View" />

		<androidx.fragment.app.FragmentContainerView
			android:id="@+id/fallbackFragment"
			android:name="com.professor.zerion.android.hotspot.FallbackFragment"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/site4View"
			tools:layout="@layout/fragment_hotspot_fallback" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
