<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_zerion_gradient">

	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:id="@+id/coordinatorLayout"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toTopOf="@+id/connectedView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent">

			<com.google.android.material.tabs.TabLayout
				android:id="@+id/tabLayout"
				style="@style/Zerion.TabLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:layout_scrollFlags="scroll|enterAlways"
				app:tabGravity="fill"
				app:tabInlineLabel="true"
				app:tabMaxWidth="0dp"
				app:tabMode="fixed">

				<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:icon="@drawable/ic_add_white"
					android:text="@string/hotspot_tab_manual" />

				<com.google.android.material.tabs.TabItem
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:icon="@drawable/ic_qr_code"
					android:text="@string/qr_code" />
			</com.google.android.material.tabs.TabLayout>

		</com.google.android.material.appbar.AppBarLayout>

		<androidx.viewpager2.widget.ViewPager2
			android:id="@+id/pager"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior" />

	</androidx.coordinatorlayout.widget.CoordinatorLayout>

	<TextView
		android:id="@+id/connectedView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:text="@string/hotspot_no_peers_connected"
		android:textColor="#FFFFFF"
		android:textSize="14sp"
		app:layout_constraintBottom_toTopOf="@+id/connectedButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/connectedButton"
		style="@style/Zerion.Button.Primary"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="6dp"
		android:layout_marginBottom="6dp"
		android:text="@string/hotspot_button_connected"
		app:icon="@drawable/ic_check_white"
		app:layout_constraintBottom_toTopOf="@+id/stopButton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/connectedView"
		tools:visibility="visible" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/stopButton"
		style="@style/Zerion.Button.Negative"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="6dp"
		android:layout_marginBottom="16dp"
		android:text="@string/hotspot_button_stop_sharing"
		app:icon="@drawable/ic_portable_wifi_off"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/connectedButton"
		tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
