<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_zerion_gradient"
	android:scrollbars="vertical"
	android:fillViewport="true">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp">

		<TextView
			android:id="@+id/manualIntroView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:gravity="center"
			android:text="@string/hotspot_manual_site"
			android:textColor="#FFFFFF"
			android:textSize="16sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/ssidLabelView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:text="@string/hotspot_manual_wifi_ssid"
			android:textColor="#B3FFFFFF"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/manualIntroView" />

		<TextView
			android:id="@+id/ssidView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="6dp"
			android:layout_marginEnd="16dp"
			android:layout_marginRight="16dp"
			android:background="#1A2830"
			android:padding="12dp"
			android:textColor="#26B7F0"
			android:textSize="16sp"
			android:textStyle="bold"
			android:typeface="monospace"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/ssidLabelView"
			tools:text="DIRECT-42-dfoln3lncsoij23" />

		<TextView
			android:id="@+id/passwordLabelView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginRight="16dp"
			android:text="@string/enter_password"
			android:textColor="#B3FFFFFF"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/ssidView" />

		<TextView
			android:id="@+id/passwordView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginLeft="16dp"
			android:layout_marginTop="6dp"
			android:layout_marginEnd="16dp"
			android:layout_marginRight="16dp"
			android:background="#1A2830"
			android:padding="12dp"
			android:textColor="#26B7F0"
			android:textSize="16sp"
			android:textStyle="bold"
			android:typeface="monospace"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/passwordLabelView"
			tools:text="sdfsdgt2334rfw" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
